--- a/index.ipynb
+++ b/index.ipynb
@@ -75,10 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()\n",
     "# create database connection here"
    ]
   },
@@ -97,10 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff0e7ae12d0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "cursor.execute('''CREATE TABLE cats ( id INTEGER PRIMARY KEY, name TEXT, age INTEGER, breed TEXT, owner_id INTEGER );''')\n",
+    "\n",
     "# create table here"
    ]
   },
@@ -121,11 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ff0e7ae12d0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert data here"
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Maru\", 3 , \"Scottish Fold\", 1);''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Hana\", 1 , \"Tabby\", 1);''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Lil\\' Bub\", 5, \"American Shorthair\");''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Moe\", 10, \"Tabby\");''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Patches\", 2, \"Calico\");''')# insert data here"
    ]
   },
   {
@@ -143,11 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None),\n",
+       " (5, 'Patches', 2, 'Calico', None)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select all data from cats data here"
+    "cursor.execute('''SELECT * FROM cats;''').fetchall()# select all data from cats data here"
    ]
   },
   {
@@ -186,11 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 'Hana', 1, 'Tabby', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select all cats order by age here"
+    "cursor.execute('''SELECT * FROM cats ORDER BY age;''').fetchall()"
    ]
   },
   {
@@ -221,11 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'Moe', 10, 'Tabby', None),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (2, 'Hana', 1, 'Tabby', 1)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats order by age descending here"
+    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC;''').fetchall()# select cats order by age descending here"
    ]
   },
   {
@@ -262,9 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'Moe', 10, 'Tabby', None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
     "# OR\n",
@@ -291,11 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'Moe', 10, 'Tabby', None), (3, \"Lil' Bub\", 5, 'American Shorthair', None)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select the two oldest cats here"
+    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 2;''').fetchall() # select the two oldest cats here"
    ]
   },
   {
@@ -330,11 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), ('Hana',), ('Patches',)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# find all records between ages 1 and three here"
+    "cursor.execute('''SELECT name FROM cats WHERE age BETWEEN 1 and 3;''').fetchall()# find all records between ages 1 and three here"
    ]
   },
   {
@@ -365,10 +474,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "cursor.execute('''DELETE FROM cats WHERE id=7;''')\n",
+    "cursor.execute('''SELECT * FROM cats''').fetchall()\n",
     "# insert new record here\n",
     "# retrieve all records from the cat table here"
    ]
@@ -397,11 +524,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats where the name field is null here"
+    "cursor.execute('''SELECT * FROM cats WHERE name is NULL;''').fetchall()# select cats where the name field is null here"
    ]
   },
   {
@@ -439,11 +577,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# retrieve the count of cats whose owner id = 1 here"
+    "cursor.execute('''SELECT COUNT(owner_id) FROM cats WHERE owner_id = 1;''').fetchone()# retrieve the count of cats whose owner id = 1 here"
    ]
   },
   {
@@ -627,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
